# project

./: .gitignore  helloworld.md
Discriminant/: main.cpp
Geek/: .gitignore  Git_manual.md  Markdown.md  max-min.drawio  psevdCode.txt  sr_arf.drawio  sum_between_min_max.drawio  swap.drawio  Диаграмма без названия.drawio
Geek/Git/: manual.md
Geek/bloksheme/: blok sheme.rar  indexmax.drawio  max-min.drawio  xny.drawio
Grigoriy/11/: main.cpp
Grigoriy/12/: 12.cpp  test.txt
Shark/: sharkMain.cpp
Skillbox/: 19.rar
Skillbox/11/Caesar/: main.cpp
Skillbox/12.massive/: House.cpp
Skillbox/13.vector/: 2.cpp
Skillbox/14.2-x_arrays/: 2.cpp  3.cpp  4.cpp  5.cpp  8.cpp
Skillbox/15/: 1.cpp  2.cpp  3.cpp  4.cpp
Skillbox/16/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
Skillbox/17/: 1.cpp  2.cpp  3.cpp
Skillbox/18/: 1.cpp  2.cpp  3.cpp  4.cpp
Skillbox/19/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  filecreate.cpp  words.txt
Skillbox/20/: 1.cpp  2.cpp  3.cpp  4-2.cpp  4.cpp  basket.txt  river.txt
Skillbox/21/: 1.cpp  2.cpp  3.cpp
Skillbox/22/: 1.cpp  2.cpp  3.cpp
Skillbox/23/: 1.cpp  2.cpp
Skillbox/24/: 1.cpp  2.cpp  3.cpp  status.txt
Skillbox/25/Task_2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kdb.cpp  main.cpp  ram.cpp
Skillbox/26/: 1.cpp
Skillbox/Geek/: faktorial.drawio  Диаграмма без названия.drawio
Skillbox/Valid_IP/: ip.cpp
Skillbox/instructions/: Class.cpp  algoritm_Kadane.cpp  date.md  macros.cpp  map.cpp  pointer.cpp  vector.cpp
Skillbox/test/: algoritm_HeapSort.cpp  algoritm_na_massiv.cpp  bank.txt  bynary.cpp  file.cpp  lamp.cpp  map.cpp
(+53 files in other folders)
